# smart-technologies-interview-presentation

./: README.rst  pyproject.toml
smart_technologies_interview_presentation/: helper_class_and_functions.py  presentation.ipynb  presentation_rough_work.ipynb  scrap_work.ipynb
tests/: test_smart_technologies_interview_presentation.py
