[tool.poetry]
name = "smart-technologies-interview-presentation"
version = "0.1.0"
description = ""
authors = ["Daniel Yang <dziyang95@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
scipy = "^1.9.0"
scikit-learn = "^1.1.2"
pandas = "^1.4.3"
seaborn = "^0.11.2"
statsmodels = "^0.13.2"
yellowbrick = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
